# OpsecManager

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  commands.txt  conanfile.txt
cmake/: dependencies.cmake
cmake/dependencies/: libpqxx.cmake  openssl.cmake  postgres.cmake  slint.cmake
project/: CMakeLists.txt
project/src/: main.cpp  network_manager.cpp
project/src/application_engine/: CMakeLists.txt  application_engine.cpp  application_engine.h
project/ui/: app_window.slint
project/ui/screens/: home.slint  login.slint
tests/: CMakeLists.txt  application_engine_test.cc
